--- a/index.html
+++ b/index.html
@@ -19,28 +19,15 @@
     <div class="container" id="container">
         <div class="item">
             <i class="fa-solid fa-xmark" id="delete-bookmark" title="Delete BookMark"></i>
-            <div class="name">
-                <img src="" alt="icon">
-                <a href="" target="_blank">website name</a>
+            <div class="name" id="bookmark-item">
+                <img src="" alt="icon" id="favicon">
+                <a href="" target="_blank" id="url"></a>
             </div>
         </div>
-        <div class="item">
-            <i class="fa-solid fa-xmark" id="delete-bookmark" title="Delete BookMark"></i>
-            <div class="name">
-                <img src="" alt="icon">
-                <a href="" target="_blank">website name</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fa-solid fa-xmark" id="delete-bookmark" title="Delete BookMark"></i>
-            <div class="name">
-                <img src="" alt="icon">
-                <a href="" target="_blank">website name</a>
-            </div>
-        </div>
+        
     </div>
     <!-- Modal -->
-    <div class="modal-container show-modal" id="modal">
+    <div class="modal-container" id="modal">
         <div class="modal">
         <i class="fas fa-solid fa-xmark close-icon" id="modal-close"></i>
 
