--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <h1 id="show-modal">Add Bookmark</h1>
     <!-- Bookamrks -->
     <div class="container" id="container">
-        <div class="item">
+        <!-- <div class="item">
             <i class="fa-solid fa-xmark" id="delete-bookmark" title="Delete BookMark"></i>
             <div class="name" id="bookmark-item">
                 <img src="" alt="icon" id="favicon">
                 <a href="" target="_blank" id="url"></a>
             </div>
-        </div>
+        </div> -->
         
     </div>
     <!-- Modal -->
